; ModuleID = '/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_directorymanagement.c_wceex_GetCurrentDirectoryW.c'
source_filename = "/home/carl/AnghaBench/poco/Foundation/wcelibcex-1.0/src/extr_wce_directorymanagement.c_wceex_GetCurrentDirectoryW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4
@Cwd = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i64 @wceex_GetCurrentDirectoryW(i64 %0, i64* %1) #0 {
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64*, align 8
  %6 = alloca i64, align 8
  store i64 %0, i64* %4, align 8
  store i64* %1, i64** %5, align 8
  %7 = load i64*, i64** %5, align 8
  store i64 0, i64* %7, align 8
  %8 = call i64 (...) @InitCwd()
  %9 = icmp ne i64 %8, 0
  br i1 %9, label %10, label %13

10:                                               ; preds = %2
  %11 = load i32, i32* @errno, align 4
  %12 = call i32 @SetLastError(i32 %11)
  store i64 0, i64* %3, align 8
  br label %27

13:                                               ; preds = %2
  %14 = load i32, i32* @Cwd, align 4
  %15 = call i64 @wcslen(i32 %14)
  store i64 %15, i64* %6, align 8
  %16 = load i64, i64* %6, align 8
  %17 = load i64, i64* %4, align 8
  %18 = icmp uge i64 %16, %17
  br i1 %18, label %19, label %22

19:                                               ; preds = %13
  %20 = load i64, i64* %6, align 8
  %21 = add i64 %20, 1
  store i64 %21, i64* %3, align 8
  br label %27

22:                                               ; preds = %13
  %23 = load i64*, i64** %5, align 8
  %24 = load i32, i32* @Cwd, align 4
  %25 = call i32 @wcscpy(i64* %23, i32 %24)
  %26 = load i64, i64* %6, align 8
  store i64 %26, i64* %3, align 8
  br label %27

27:                                               ; preds = %22, %19, %10
  %28 = load i64, i64* %3, align 8
  ret i64 %28
}

declare dso_local i64 @InitCwd(...) #1

declare dso_local i32 @SetLastError(i32) #1

declare dso_local i64 @wcslen(i32) #1

declare dso_local i32 @wcscpy(i64*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
